--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p{
     max-width: 350px;
     border-radius: 8px;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 .buttonun{
     margin-left: 120px;
@@ -51,6 +51,7 @@ p{
     height: 30px;
     margin: 5px 0px 5px 10px;
     background-color: rgb(86, 247, 86);
+    border-radius: 6px;
 
 }
 .labal{
