--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p{
     width: 200px;
     height: 30px;
     margin: 5px 0px 5px 10px;
-    background-color: rgb(86, 247, 86);
+    background-color: rgb(201, 238, 171);
     border-radius: 6px;
 
 }
@@ -76,4 +76,7 @@ p{
 #yorum{
     margin-left: 10px;
 }
-              
+  
+#yorum{
+    background-color: rgb(201, 238, 171);
+}
