--- a/GoogleSon/style.css
+++ b/GoogleSon/style.css
@@ -1,10 +1,12 @@
 .left{
     float: left;
     margin-top: 5px;
+    display: inline;
 }
 .right{
     float: right;
     margin-top: 0px;
+    display: inline;
 }
 .about,
 .store,
@@ -25,7 +27,6 @@
 .gruppe:hover{
     text-decoration: underline;
     opacity: 0.8;
-    font-weight: bold;
 }
 
 .sign{
@@ -44,10 +45,9 @@
 }
 .alt{
     width: 250px;
-    margin-top: 200px;
     margin: auto;
     position: relative;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .logom{
     margin-top: 40px;
@@ -172,11 +172,12 @@
     color: gray;
     font-weight: bold;
     font-size: 18px;
-    height: 50px;
-    position: relative;
-    top: 190px;
+    height: 38px;
+    position: fixed;
+    top: 520px;
+    width: 100%;
     background-color: #e4e4e4;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 .footer-right,
 .footer-left{
@@ -187,12 +188,13 @@
 }
 .birlik{
     background-color: #e4e4e4;
-    height: 50px;
-    position: relative;
+    height: 42px;
+    position: fixed;
+    width: 100%;
     bottom: 0px;
-    top: 178px;
+    top: 578px;
     outline-style: 1px solid gray;
     border-top: 1px solid gray;
     opacity: 0.8;
-    padding-top: 10px;
+    padding-top: 20px;
 }
