--- a/GoogleSon/style.css
+++ b/GoogleSon/style.css
@@ -1,12 +1,17 @@
+*{
+    box-sizing: border-box;
+    
+}
 .left{
     float: left;
-    margin-top: 5px;
-    display: inline;
+    margin-top: 10px;
+    
 }
 .right{
     float: right;
     margin-top: 0px;
-    display: inline;
+    
+    
 }
 .about,
 .store,
@@ -42,6 +47,7 @@
 }
 .sign:hover{
     height: 35px;
+    cursor: pointer;
 }
 .alt{
     width: 250px;
@@ -52,6 +58,7 @@
 .logom{
     margin-top: 40px;
     margin-bottom: 30px;
+    /* object-position: center bottom; */
     
 }
 .gruppe{
@@ -83,6 +90,9 @@
     margin: 12px 12px 0px 0px;
     
 }
+.mikro:hover{
+    cursor: pointer;
+}
 .searchkutu{
     width: 88%;
     margin-left: 5px;
@@ -107,6 +117,9 @@
     width: 400px;
     height: 45px;
 } */
+.butons{
+    text-align: center;
+}
 .btn{
     text-decoration: none;
     color: black;
@@ -119,7 +132,8 @@
     background-color: rgb(185, 180, 180);
     position: relative;
     top: 40px;
-    left: 530px;
+    /* left: 530px; */
+    
     padding: 10px;  
 }
 .btn:hover{
@@ -132,12 +146,14 @@
     margin-left: 7px;
     opacity: 0.9;
     font-weight: bold;   
+    
 }
 .chose{
     position: relative;
     top: 70px;
-    left: 535px;
+    /* left: 535px; */
     opacity: 0.8;
+    text-align: center;
 }
 
 .footer-links{
@@ -172,9 +188,9 @@
     color: gray;
     font-weight: bold;
     font-size: 18px;
-    height: 38px;
+    height: 58px;
     position: fixed;
-    top: 520px;
+    top: 541px;
     width: 100%;
     background-color: #e4e4e4;
     padding-top: 20px;
@@ -188,11 +204,11 @@
 }
 .birlik{
     background-color: #e4e4e4;
-    height: 42px;
+    height: 58px;
     position: fixed;
     width: 100%;
     bottom: 0px;
-    top: 578px;
+    top: 599px;
     outline-style: 1px solid gray;
     border-top: 1px solid gray;
     opacity: 0.8;
