--- a/Border/style.css
+++ b/Border/style.css
@@ -20,3 +20,15 @@ img{
 h1{
     margin-left: 240px;
 }
+.none{
+    text-transform: none;
+}
+.capitalize{
+    text-transform: capitalize;
+}
+.uppercase{
+    text-transform: uppercase;
+}
+.lowercase{
+    text-transform: lowercase;
+}
