--- a/Parallax_Website/style.css
+++ b/Parallax_Website/style.css
@@ -8,7 +8,7 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     opacity: 0.7;
 }
-p{
+.erste{
     font-size: 6em;
     color: white;
     font-size: 7vh;
@@ -17,28 +17,64 @@ p{
     width: 70vh;
     margin: auto;
     margin-top: 38vh;
+    /* position: relative;
+    top:50%; */
 }
-.alk{
+.others{
+    font-size: 6em;
+    color: white;
+    font-size: 7vh;
+    
+    padding: 1vh;
+    width: 70vh;
+    margin: auto;
+    margin-top: 28vh;
+    
+}
+.seca{
     font-size: 4vh;
-    background-color: white;
+    background-color:white;
     margin: 0vh;
     width: 100%;
+    height: 250px;
+    padding-top: 50px;
+    justify-content: center;
+    
+}
+.secb{
+    font-size: 4vh;
+    background-color:black;
+    color: white;
+    margin: 0vh;
+    width: 100%;
+    height: 250px;
+    padding-top: 50px;
+    justify-content: center;
     
 }
 .image{
     width: 100%;
     height: 100vh;
     padding: 50px;
+    
 }
 .a{
     background: url(./img/Image1.jpg) center/cover;
+    background-attachment: fixed;
 }
 .b{
     background:url(./img/Image2.jpg) center/cover;
+    background-attachment: fixed;
+    padding:0px;
 }
 .c{
     background:url(./img/Image3.jpg) center/cover;
+    background-attachment: fixed;
+    padding:0px;
 }
 .d{
     background:url(./img/Image1.jpg) center/cover;
+    background-attachment: fixed;
+    padding:0px;
+
 }
